timer update rules

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <span class="period-counter second">.</span>
       <span class="period-counter third">.</span>
       <span class="period-counter forth">.</span>
+      <span class="timer"><label id="minutes">00</label>:<label id="seconds">00</label></span>
     </p>
     <div id="playingBoard" class="cards-wrapper clearfix"></div>
   </main>
