updating the timer

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <span class="timer"><label id="minutes">00</label>:<label id="seconds">00</label></span>
     </p>
     <div id="playingBoard" class="cards-wrapper clearfix"></div>
+    <div id="gameOver">
+      <p class="playAgainButton" onclick="resetGame()">Play Again</p>
+    </div>
   </main>
   <footer></footer>
 
