fixing timer ui;

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <span class="timer"><label id="minutes">00</label>:<label id="seconds">00</label></span>
     </p>
     <div id="playingBoard" class="cards-wrapper clearfix"></div>
-    <div id="gameOver">
+    <div id="gameOver" class="hide">
       <p class="playAgainButton" onclick="resetGame()">Play Again</p>
     </div>
   </main>
