--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     <div id="gameOver" class="hide">
       <p class="playAgainButton" onclick="resetGame()">Play Again</p>
     </div>
+
+    <h4>You have 10 seconds to remember these cards. Click to flip them over and see how many you commit to memory!</h4>
   </main>
   <footer>
     <div class="logo">
