oops cards start flipped!

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
       <span class="period-counter forth">.</span>
       <span class="timer"><label id="minutes">00</label>:<label id="seconds">00</label></span>
     </p>
+    
     <div id="playingBoard" class="cards-wrapper clearfix"></div>
+
+    <h4>When the timer starts click to flip them over and see how many you can match!</h4>
     <div id="gameOver" class="hide">
       <p class="playAgainButton" onclick="resetGame()">Play Again</p>
     </div>
-
-    <h4>You have 10 seconds to remember these cards. Click to flip them over and see how many you commit to memory!</h4>
   </main>
   <footer>
     <div class="logo">
